--- a/index.html
+++ b/index.html
@@ -3,42 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <title>
+        <script src="app.js"></script>
+        <script src="perguntas.js"></script>
+    </title>
 </head>
 <body>
     <main>
         <section id= “container”> 
             <article class="cartao">
-
-                <div class="cartao__conteudo">
-<h3> Programação </h3>
+                cartao.innerHTML = `
+<div class="cartao__conteudo">
+<h3>Programação</h3>
 <div class="cartao__conteudo__pergunta">
-    O que é Java Script?
-    <div class="cartao__conteudo__resposta">
-        O Java Script é uma linguagem de programação.
-        </div>
-    </div>
+        <p>O que é JavaScript?</p>
+</div>
+<div class="cartao__conteudo__resposta">
+        <p>O JavaScript é uma linguagem de programação</p>
+</div>
+</div>
+`
                 </div>
             </article>
-
-<article class="cartao">
-    <div class="cartao__conteudo">
-            <h3> Programação </h3>
-                  <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
-                    </div>                        
-                   <div class="cartao__conteudo__resposta">
-                        O CSS é uma linguagem de estilização.
-                     </div>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Geografia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual a capital da França?</p>
                     </div>
-                        
-     </article>
+                    <div class="cartao__conteudo__resposta">
+                        <p>A capital da França é Paris</p>
+                    </div>
+                </div>
+            </article>
     </main>
 
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
     </footer>
+    <script src="perguntas.js"></script>
     
 </body>
 </html>
