--- a/index.html
+++ b/index.html
@@ -12,20 +12,34 @@
 <body>
     <main>
         <section id= “container”> 
-            <article class="cartao">
-                cartao.innerHTML = `
-<div class="cartao__conteudo">
-<h3>Programação</h3>
-<div class="cartao__conteudo__pergunta">
-        <p>O que é JavaScript?</p>
-</div>
-<div class="cartao__conteudo__resposta">
-        <p>O JavaScript é uma linguagem de programação</p>
-</div>
-</div>
-`
+            container.appendChild(cartao.innerHTML = `
+            <div class="cartao__conteudo">
+            <h3>${categoria}</h3>
+            <div class="cartao__conteudo__pergunta">
+                    <p>${pergunta}</p>
+            </div>
+            <div class="cartao__conteudo__resposta">
+                    <p>${resposta}</p>
+            </div>
+            </div>
+    `)
+    
+                <!-- <article class="cartao">
+                <div class="cartao__conteudo">
+                        <h3>Programação</h3>
+                        <div class="cartao__conteudo__pergunta">
+                                <p>O que é JavaScript?</p>
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                                <p>O JavaScript é uma linguagem de programação</p>
+                        </div>
                 </div>
-            </article>
+                    criaCartao(
+    'Lingua inglesa',
+    'Como se diz OI em inglês?',
+    'Oi em ingles é HI (RAI)'
+) 
+        </article> -->
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Geografia</h3>
